version 0.30? - svn?

* Loading login credentials (user and password) from file is a new option added.
   Login usernames and passwords input from a text file with the structure of 
   each string like: <username><separator><password>.
   According to RFC1738, only reserved ':', '@', '/' and ' ' (space) are safe 
   to use as separators between username and password.
	
* Cleanup of allocations and client array initializations in login.c

* Hyper-mode is coming?
	
* README file re-worked to have a more structured fashion.
	
* Initial IPv6 support added. Batch configuration conf-example/ipv6.conf
   and patch patches/curl-ipv6-bind.patch are added. The patch has been
   integrated to the mainline libcurl, therefore we shall remove it, when moving
   to the next libcurl release.
   Our code now actually supports other scopes for IP, than "global". Do we
   need to make an option to configure scope for IP-address?
   TODO: IPv6 flow label support?
	
* Libevent library added to the making process as a separate
   making target.
	
* Added USER_AGENT tag to the section GENERAL to make HTTP User-Agent 
   header configurable. When no tag or empty tag or empty tag string is 
   specified, curl-loader takes the default User-Agent header of MSIE-6 (sorry,
   FireFox folks).

* Documentation improved and all HOWTOS-* files moved to the docs directory.
	

version 0.26 - svn 151

* Added support for HTTP Authentication and Proxy Authentication.
   The methods supported are Basic, Digest (RFC2617) and NTLM.
   When an HTTP server/proxy responds by 401 or 407, libcurl will choose the 
    most safe method from those, supported by the server/proxy.

* "make menuconfig" opens dialog menu to assist in creation of
   a loading batch configuration file. Building dialog package requires
   ncurses development package.
   Run "make menuconfig" to see, what happens.

* Batch configuration tags since this version can be provided as either quotted 